Προσθήκη λειτουργικής βάσης δεδομένων και η εφαρμογη λειτουργει με ιντερνετ, που σημαινει οτι ανα πασα ωρα και στιγμη μπορει να στειλει δεδομενα στην βαση.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.1.0' // Update to the latest version
+        classpath 'com.google.gms:google-services:4.3.10' // Update to the latest version
+    }
+}
+
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
@@ -7,9 +18,10 @@ android {
     namespace 'com.example.humanaid'
     compileSdk 33
 
-  buildFeatures{
-      viewBinding true
-  }
+    buildFeatures {
+        viewBinding true
+    }
+
     defaultConfig {
         applicationId "com.example.humanaid"
         minSdk 24
@@ -27,21 +39,27 @@ android {
         }
     }
 
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
 }
 
 dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.firebase:firebase-firestore:24.1.0'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.firebase:firebase-database:20.2.2'
+    implementation 'com.google.firebase:firebase-database-ktx:20.2.2'
+    implementation ('com.google.firebase:firebase-ml-vision:24.1.0') {
+        exclude group: 'com.google.android.gms', module: 'play-services-vision'
+        exclude group: 'com.google.android.gms', module: 'play-services-vision-common'
+    }
+    implementation 'com.google.android.gms:play-services-vision:20.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
+
+
+
+
